# selenium-testing-library

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  changelog.md  package-lock.json  package.json  pyproject.toml  tox.ini  type_testing.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: main.yml  upgrade-dependencies.yml
selenium_testing_library/: __init__.py  locators.py  screen.py
src/: index.js
tests/: conftest.py  test_selenium_testing_library.py
tests/pages/: bugs.html  extra.html  extra_role.html  form.html  index.html  label.html  role.html
