[tool.poetry]
name = "selenium-testing-library"
version = "2022.3b0"
description = "A Python Selenium library inspired by the Testing Library"
readme = "README.md"
license = "MIT"
repository = "https://github.com/anze3db/selenium-testing-library"
authors = ["Anže Pečar <anze@pecar.me>"]

[tool.poetry.urls]
"Changelog" = "https://github.com/anze3db/selenium-testing-library/blob/main/CHANGELOG.md"

[tool.poetry.dependencies]
python = "^3.7"
selenium = ">3.0.0"

[tool.poetry.dev-dependencies]
pytest = "*"
black = "*"
pytest-cov = "*"
pytest-watch = "*"
mypy = "*"
isort = "*"
tox = "*"
tox-py = "*"
bumpver = "*"
types-selenium = "*"
coverage = "*"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
minversion = "6.2.4"
addopts = "--selenium-headless --cov=selenium_testing_library --cov-report html --cov-report xml --verbose --durations=10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.bumpver]
current_version = "2022.3b0"
version_pattern = "YYYY.INC1[PYTAGNUM]"
commit_message = "Bump version from {old_version} to {new_version} 🚀"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
"selenium_testing_library/__init__.py" = [
    '__version__ = "{version}"'
]
"tests/test_selenium_testing_library.py" = [
    'assert __version__ == "{version}"'
]

[tool.mypy]
python_version = "3.7"
warn_unused_configs = true
